--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Aman Bhardwaj",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.7",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
